# ExtendedKalmanFilter

./: EKF.ipynb  EKF.py  __EKF.ipynb  ekf_nn_baseline.py  ekf_nn_baseline_torch.py  ekf_nn_hybrid.py  ekf_nn_hybrid_smoothing.py  ekf_plotting.py  ekf_test.py  orientation_test_output.csv  orientation_test_output_hybrid.csv  orientation_test_output_hybrid_smoothing.csv  pyproject.toml
data/: sample-submision.csv  test.csv  train.csv
src/extendedkalmanfilter/: __init__.py
