[project]
name = "extendedkalmanfilter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy>=1.14.1",
    "numpy>=2.1.3",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "scikit-learn",
    "filterpy>=1.4.5",
    "torch-kf>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
]
